# aws-prime-video-xray-clone

./: .gitignore  README.md  cdk.json  pyproject.toml
backend/chat_ui/: prime_video_xray_app.py  requirements.txt
backend/chat_ui/local/: README.txt
backend/common/: logger.py
backend/common/helpers/: dynamodb_helper.py  s3_helper.py
backend/state_machine/: __init__.py  base_step_function.py  state_machine_handler.py
backend/state_machine/processing/: image_detection.py  image_drawing.py  video_cutter_s3.py
backend/state_machine/states/: arrange_final_results.py  convert_video_to_images.py  process_images.py
cdk/: app.py
cdk/stacks/: cdk_prime_video_xray_stack.py  user_data_script.sh
lambda-layers/common/: requirements.txt
