[tool.poetry]
name = "aws-prime-video-xray-clone"
version = "0.0.1"
description = "Amazon Prime Video X-Ray Clone"
authors = [
    "Santiago Castellanos <samaestre8@gmail.com>",
    "Santiago Garcia Arango <san99tiago@gmail.com>",
]
license = "Apache"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aws-cdk-lib = "2.132.0"
constructs = ">=10.0.0,<11.0.0"
streamlit = "^1.37.1"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.0"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
coverage = "^7.4.0"
black = "^23.12.1"
boto3 = "^1.34.14"
aws-lambda-powertools = { version = "^2.31.0" }


[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["cdk", "src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
black-format = "black ."
black-check = "black . --check --diff -v"
test-unit = ["_test_unit", "_coverage_report", "_coverage_html"]
synth = "cdk synth"
_test_unit = "coverage run -m pytest tests/unit"
_coverage_report = "coverage report"
_coverage_html = "coverage html"

[tool.coverage.run]
branch = true
source = ["src", "cdk"]
omit = ["**/__init__.py", "cdk/app.py"]

[tool.coverage.report]
show_missing = false
